# patchVVC

./: .gitignore  CMakeLists.txt
include/: zstd.h
include/coder/: io.h  octree.h  operation.hpp  registration.h  segment.h  videocoder.h
include/dependency/: io.h  octree.h  operation.hpp  registration.h  segment.h  turbojpeg.h  type.hpp
src/: CMakeLists.txt
src/coder/: CMakeLists.txt  GOF.cpp  ICP.cpp  decoder.cpp  encoder.cpp  io.cpp  regist_base.cpp
src/dependency/: CMakeLists.txt  GOF.cpp  ICP.cpp  Patch.cpp  SimplePatch.cpp  deoctree.cpp  io.cpp  octree.cpp  octree_old.cpp  regist_base.cpp
